# DevForge

./: .env.example  .gitignore  .yamllint.yml  LICENSE  Makefile  README.md  devforge  devforge-ai.yaml  devforge.ps1  docker-compose.override.yml  docker-compose.yml  requirements.engine.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: compose-validate.yml  docker-build-validate.yml  lint-validation.yml  sbom-generation.yml  security-scan.yml
DevForge_Prompt_Pack/: 00_MASTER_SPEC.md  01_FOUNDATION.md  02_NODE_PLATFORM.md  03_PYTHON_PLATFORM.md  04_AI_PLATFORM.md  05_JAVA_PLATFORM.md  06_FLUTTER_PLATFORM.md  07_DATABASE_PLATFORM.md  08_INFRA_MONITORING.md  09_DEVFORGE_CLI.md  10_PRODUCTION_HARDENING.md
docker/ai/: Dockerfile
docker/base/: Dockerfile
docker/chromadb/: Dockerfile
docker/cli/: Dockerfile
docker/flutter/: Dockerfile
docker/java/: Dockerfile
docker/loki/: loki-config.yaml
docker/mongodb/: Dockerfile  mongod.conf
docker/neo4j/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
docker/node/: Dockerfile
docker/ollama/: Dockerfile
docker/open-webui/: Dockerfile
docker/postgres/: Dockerfile
docker/python/: Dockerfile
docker/qdrant/: Dockerfile
docker/redis/: Dockerfile  redis.conf
docs/: architecture.md  cli_reference.md  database_platform.md  flutter_workflow.md  node_platform.md  observability_platform.md
engine/: __init__.py  cli.py  composer.py  detection.py  generator.py  plugin_manager.py  service_manager.py  template_engine.py  validation.py  workspace.py
registry/: plugins.yaml  templates.yaml
scripts/: backup.sh  clean-caches.sh  create-ai.sh  create-django.sh  create-express.sh  create-fastapi.sh  create-flask.sh  create-flutter.sh  create-nestjs.sh  create-nextjs.sh  create-react.sh  create-springboot.sh  db-backup.sh  db-restore.sh  db-seed.sh  doctor.sh  format.sh  install-deps.sh  lint.sh  restore.sh  update-packages.sh
templates/ai/: README.md  pyproject.toml  requirements.txt
templates/ai/app/: __init__.py  config.py
templates/ai/app/routers/: ai_ops.py  health.py
templates/ai/tests/: test_main.py
templates/django/: .env.example  README.md  pyproject.toml
templates/django/config/: __init__.py
templates/django/core/: tests.py
templates/flask/: .env.example  README.md  pyproject.toml  requirements.txt
templates/flask/app/: __init__.py  config.py  logger.py  routes.py
tests/: test_ai_system.py  test_existing_import.py  test_plugin_create.py
(+133 files in other folders)
