[tool.poetry]
name = "sample-ai"
version = "0.1.0"
description = "A production-ready AI/ML project for DevForge"
authors = ["DevForge Authors"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
httpx = "^0.27.0"
langchain = "^0.1.12"
langchain-community = "^0.0.28"
langchain-openai = "^0.0.8"
langgraph = "^0.0.26"
llama-index = "^0.10.19"
crewai = "^0.22.4"
opencv-python-headless = "^4.9.0.80"
easyocr = "^1.7.1"
pytesseract = "^0.3.10"
openai-whisper = "^20231117"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.3"
black = "^24.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
