[tool.poetry]
name = "sample-flask"
version = "0.1.0"
description = "A production-ready Flask project for DevForge"
authors = ["DevForge Authors"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
gunicorn = "^21.2.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.3"
black = "^24.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
